// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListReminders does something nice for no reminders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    No reminders yet, why not create one?
  </Text>
</View>
`;

exports[`ListReminders renders some reminders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View>
    <Text>
      Reminder at 
      10:30
    </Text>
  </View>
  <View>
    <Text>
      Reminder at 
      12:00
    </Text>
  </View>
</View>
`;
